--- a/resources/css/query.css
+++ b/resources/css/query.css
@@ -15,6 +15,10 @@
         margin: 0 auto;
         width: 90%;
     }
+
+    #profile .col-4 button {
+        min-width: 146px;
+    }
 }
 
 /* This is exclusive for tablets */
@@ -65,6 +69,13 @@
 
     p.large-text {
         font-size: 1rem !important;
+    }
+
+    #profile .col-4 button {
+        padding-top: 0.2rem;
+        padding-bottom: 0.2rem;
+        line-height: 1.1;
+        height: 39px;
     }
 }
 
